DuPont DevSB/src/objects/pse__Billing_Queue__c.object
<CustomObject>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Business_Record__c</fullName>
        <formula>pse__Transaction__r.pse__Budget__r.Name +
pse__Transaction__r.pse__Expense__r.Name +
pse__Transaction__r.pse__Milestone__r.Name + 
pse__Transaction__r.pse__Miscellaneous_Adjustment__r.Name +
pse__Transaction__r.pse__Timecard__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Billing Queues</relationshipLabel>
        <relationshipName>Billing_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>pse__Transaction__c</referenceTo>
        <relationshipLabel>Billing Queues</relationshipLabel>
        <relationshipName>Billing_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Billing Queue</label>
    <nameField>
        <displayFormat>BQ-{000000}</displayFormat>
        <label>Billing Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>